[package]
name = "router-loadtest-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
solana-sdk = { version = "1.17", features = ["default"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.5.2"

#solana-rpc-client = { version = "1.17" }
#solana-rpc-client-api = { version = "1.17" }
